New manifest and version format

--- a/combo_manifest.json
+++ b/combo_manifest.json
@@ -1,13 +1,13 @@
 {
-    "manifest_format_version": 1,
+    "manifest_format_version": "1.0",
 
     "name": "Lib A",
-    "version": "1.7",
+    "version": "1.8.0",
 
     "dependencies": [
         {
             "name": "Core Library",
-            "version": "2.1"
+            "version": "2.2.0"
         }
     ]
 }
